Lots of findbugs fixes and added in the findbugs filter which can be used to suppress searching for things which are red herrings