@@ -92,7 +92,7 @@ public class Restriction {
             if (o instanceof Boolean) {
                 return (Boolean) o;
             } else if (o instanceof String) {
-                return new Boolean((String)o).booleanValue();
+                return Boolean.valueOf((String)o).booleanValue();
             }
         }
         return false;
